# codecrafters-sqlite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: CellParser.cpp  DebugUtils.cpp  DebugUtils.h  HeaderParser.cpp  IndexScan.cpp  IndexScan.h  Node.cpp  Node.h  SQLiteAstBuilder.cpp  SQLiteAstBuilder.hpp  SQLitePrinter.cpp  SQLitePrinter.hpp  Server.cpp  Sqlite.h  SqliteBTreePageReader.cpp  SqliteBTreePageReader.h  SqliteCellReader.cpp  SqliteCellReader.h  SqliteFilePageReader.cpp  SqliteFilePageReader.h  SqlitePage.cpp  SqlitePage.h  SqlitePageReader.cpp  SqlitePageReader.h  SqliteRecord.cpp  SqliteRecord.h  SqliteSchemaPageReader.cpp  SqliteSchemaPageReader.h  SqliteTable.cpp  SqliteTable.h  SqliteUtils.cpp  SqliteUtils.h  TableScan.cpp  TableScan.h  sqlite_main.cpp  types.h  utils.h
src/btree/: SqlitePage.cpp  SqlitePage.h  TableReader.cpp
src/catalog/: CatalogBuilder.cpp  CatalogBuilder.h
src/common/: Sqlite.h  SqliteUtils.cpp  SqliteUtils.h
src/gen_sqlite/: SQLiteLexer.cpp  SQLiteLexer.h  SQLiteParser.cpp  SQLiteParser.h  SQLiteParserBaseListener.cpp  SQLiteParserBaseListener.h  SQLiteParserBaseVisitor.cpp  SQLiteParserBaseVisitor.h  SQLiteParserListener.cpp  SQLiteParserListener.h  SQLiteParserVisitor.cpp  SQLiteParserVisitor.h
src/parser/: BaseTableRef.cpp  BaseTableRef.h  ColumnDefinition.cpp  ColumnDefinition.h  Constraint.cpp  Constraint.h  CreateStatement.cpp  CreateStatement.h  CreateTableStatement.h  ParsedExpression.cpp  ParsedExpression.h  SelectStatement.cpp  SelectStatement.h  SqlStatement.cpp  SqlStatement.h  TableRef.cpp  TableRef.h  parser.h
src/sqlite/: SQLiteParser.g4
tests/: test_parse.cpp
thrid_party/: INSTALL_RECEIPT.json  sbom.spdx.json
thrid_party/lib/cmake/antlr4-runtime/: antlr4-targets-release.cmake  antlr4-targets.cmake
